draft.css
/* ... */
/* 
:root {
	--brand: #41adff;
	--mainbg: #ffffff;~
	--mainpaddng: 14px;
	--radius: 7px;

	--low: #e8f1fa;
	--like: #cfe2f7;
	--midi: #b2cee7;
	--hight: #1db5e4;

	--text: #3f4646;
	--textContrast: #1a1f1f;

	--code: #20595f;

	--button: #3dcca1;
	--buttontext: #fff;

	--fillhover: #e8f5ff;
} */

/* :root {
	--mainpaddng: 18px;
	--radius: 3px;
	--brand: #c21a1a;
	--mainbg: #312323;

	--code: #ffbe85;

	--text: #dbdbdb;
	--textContrast: #fff;

	--button: #4a2b2b;
	--buttontext: #fff;

	--fillhover: #311b1b;

	--low: #271616;
	--like: #4b2b2b;
	--midi: #593232;
	--hight: #800f0f;
} */

/* :root {
	--mainpaddng: 11px;
	--radius: 13px;
	--brand: #1ac260;
	--mainbg: #233126;

	--code: #c0ff85;

	--text: #dbdbdb;
	--textContrast: #fff;

	--button: #324a2b;
	--buttontext: #fff;

	--fillhover: #1b3122;

	--low: #162717;
	--like: #2b4b2e;
	--midi: #32593f;
	--hight: #0f803a;
} */
html {
	scroll-behavior: smooth;
}
body {
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
		"Helvetica Neue", sans-serif;
	line-height: 1.5em;
	font-size: var(--font);
	max-width: 950px;
	margin: 0px auto var(--mainpaddng);
	padding: 0 var(--mainpaddng);
	color: var(--text);
	background: var(--mainbg);
	text-rendering: optimizeLegibility;
}

label {
	display: block;
}
a,
a:active,
button,
select,
button:active,
input,
input:active,
textarea,
details,
summary,
th,
td {
	outline: none;
	box-shadow: none;
	transition: background-color 0.2s ease, box-shadow 0.2s ease,
		transform 0.2s ease;
}
h1 {
	font-size: 2.1em;
	/* margin-top: 0; */
}
h1,
h2,
h3,
h4,
h5,
h6 {
	margin-top: 1em;
	margin-bottom: 0.3em;
}
h1:first-child,
h2:first-child,
h3:first-child,
h4:first-child,
h5:first-child,
h6:first-child {
	margin-top: 0.3em;
}
h1,
h2,
h3,
h4,
h5,
h6,
strong {
	color: var(--textContrast);
	font-weight: 600;
}
button,
[role="button"],
[type="range"],
[type="color"],
[type="submit"],
[type="file"],
[type="reset"],
[type="button"],
[type="checkbox"],
[type="radio"] {
	cursor: pointer;
	display: inline-block;
}
a[role="button"] > strong,
button > strong {
	font-size: 1.4em;
	padding: 0px calc(var(--mainpaddng));
	color: var(--buttontext);
	display: block;
}
output {
	display: inline-block;
	padding: 0 var(--mainpaddng);
}

input,
select,
button,
[role="button"],
[type="button"],
textarea {
	-webkit-tap-highlight-color: transparent;
	/* display: block; */
	color: var(--textContrast);
	background-color: var(--low);
	font-family: inherit;
	font-size: inherit;
	margin: 4px 4px 6px 0;
	padding: var(--mainpaddng);
	border: none;
	border-radius: var(--radius);
	outline: none;
	-webkit-appearance: none;
	vertical-align: middle;
}

input[type="number"] {
	max-width: calc(var(--mainpaddng) * 5);
}

select:not([multiple]) {
	padding-right: calc(var(--mainpaddng) * 3);
	background: var(--low)
		url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill%3D%22%23e6e6e6%22%20d%3D%22m%2010.025%2C1.7575%20-6.67%2C0%203.335%2C3.475%20z%22%20%2F%3E%3C%2Fsvg%3E")
		100% 50%/27px 7px no-repeat;
}
input:hover,
select:hover,
textarea:hover,
textarea:hover {
	background-color: var(--fillhover);
}

a[id]:empty {
	position: relative;
	top: -122px;
	left: calc(var(--mainpaddng) * -1);
	display: inline-block;
}
a[id]:empty:after {
	display: inline-block;
	font-weight: 500;
	content: "#";
	position: relative;
	top: 120px;
	left: var(--mainpaddng);
	padding-right: 2px;
	color: var(hight);
}

textarea {
	margin-right: 0;
	width: 100%;
	box-sizing: border-box;
	resize: vertical;
}
button,
[role="button"],
[type="submit"],
[type="file"],
[type="reset"],
[type="button"] {
	text-align: center;
	box-shadow: 0 0px 0px 0px rgba(0, 0, 0, 0), 0 0px 5px -5px rgba(0, 0, 0, 0),
		0 0 0 0 rgba(0, 0, 0, 0.2), 0 0px 0 0 var(--button),
		0 0 0 80px rgba(0, 0, 0, 0.2) inset;
	color: var(--buttontext);
	background-color: var(--button);
	padding: var(--mainpaddng) calc(var(--mainpaddng) * 2);
}
/* button:empty::after {
	content: ">";
	color: transparent;
} */
button:empty,
button[type="button"][value=""],
button[type="submit"][value=""] {
	min-height: calc(var(--mainpaddng) * 2 + 1em + 2px);
}

/* input:not([value=""]):invalid,
select:not([value=""]):invalid,
textarea:not([value=""]):invalid {
	box-shadow: 0 0 0 2px darkred;
} */

input[type="search"] {
	padding-right: calc(var(--radius) + var(--mainpaddng));
}
input[type="search"] + button:empty,
input[type="search"] + input[value=""] {
	margin-left: calc(var(--radius) * -1 - 4px);
	border-top-left-radius: 0;
	border-bottom-left-radius: 0;
	background: var(--button)
		url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20129%20129%22%3E%3Cg%3E%3Cpath%20fill%3D%22%23e6e6e6%22%20d%3D%22M51.6%2C96.7c11%2C0%2C21-3.9%2C28.8-10.5l35%2C35c0.8%2C0.8%2C1.8%2C1.2%2C2.9%2C1.2s2.1-0.4%2C2.9-1.2c1.6-1.6%2C1.6-4.2%2C0-5.8l-35-35%20%20%20c6.5-7.8%2C10.5-17.9%2C10.5-28.8c0-24.9-20.2-45.1-45.1-45.1C26.8%2C6.5%2C6.5%2C26.8%2C6.5%2C51.6C6.5%2C76.5%2C26.8%2C96.7%2C51.6%2C96.7z%20M51.6%2C14.7%20%20%20c20.4%2C0%2C36.9%2C16.6%2C36.9%2C36.9C88.5%2C72%2C72%2C88.5%2C51.6%2C88.5c-20.4%2C0-36.9-16.6-36.9-36.9C14.7%2C31.3%2C31.3%2C14.7%2C51.6%2C14.7z%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E)
		50% 50%/40% auto no-repeat;
}
input[type="search"]:focus + button:empty,
input[type="search"]:focus + input[value=""] {
	box-shadow: 0 0 0 2px var(--hight);
	transform: none;
}

input:focus,
select:focus,
button:focus,
textarea:focus {
	background-color: var(--fillhover);
	box-shadow: 0 0 0 2px var(--hight);
}

button:focus,
[role="button"]:focus,
input[type="submit"]:focus,
input[type="file"]:focus,
input[type="reset"]:focus,
input[type="button"]:focus {
	background-color: var(--button);
}
/* ... */

